# django-modelsearch

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  pyproject.toml  ruff.toml  runtests.py  tox.ini  vagrant-provision.sh
.github/workflows/: linting.yml  test.yml
docs/: api.md  backends.md  developing.md  index.md  indexing.md  searching.md
modelsearch/: __init__.py  apps.py  index.py  models.py  queryset.py
modelsearch/backends/: __init__.py  base.py  elasticsearch7.py  elasticsearch8.py  elasticsearchbase.py  opensearch1.py  opensearch3.py
modelsearch/backends/database/: __init__.py  fallback.py
modelsearch/backends/database/mysql/: mysql.py
modelsearch/backends/database/postgres/: postgres.py  weights.py
modelsearch/backends/database/sqlite/: query.py  sqlite.py  utils.py
modelsearch/management/commands/: rebuild_modelsearch_index.py
modelsearch/migrations/: 0002_customise_indexentry.py
modelsearch/test/: settings.py
modelsearch/test/testapp/: models.py
modelsearch/test/testapp/fixtures/: search.json
modelsearch/tests/: elasticsearch_common_tests.py  test_backends.py  test_elasticsearch7_backend.py  test_index_functions.py  test_mysql_backend.py  test_postgres_backend.py  test_sqlite_backend.py
