[project]
name = "modelsearch"
version = "0.1.0"
description = ""
authors = [
    {name = "Karl Hobley",email = "karl@kaed.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
